--- a/style.css
+++ b/style.css
@@ -130,7 +130,8 @@ footer {
     color: grey;
 }
 
-.music {
-    width: 80%;
-    margin: auto;
+
+.largest-font {
+    font-size: 150px;
+    margin: 0px;
 }
